# matrix-locust

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  locust-run-users.py  matrixuser.py  pyproject.toml  run.py
matrix_locust/client_server/: create_room.py  join.py  register.py
matrix_locust/nio/: contrib.py  locust_client.py
matrix_locust/users/: circlesuser.py  matrixchatuser.py  matrixuser.py
scripts/: conduit-setup.sh  dendrite-setup.sh  synapse-setup.sh
test-suites/: conduit-10k.json  conduit-1k.json  conduit-2k.json  conduit-5k.json  conduit-sqlite-100.json  conduit-sqlite-1k.json  conduit-sqlite-200.json  conduit-sqlite-500.json  dendrite-10k.json  dendrite-1k.json  dendrite-2k.json  dendrite-5k.json  dendrite-sqlite-100.json  dendrite-sqlite-1k.json  dendrite-sqlite-200.json  dendrite-sqlite-500.json  synapse-10k.json  synapse-1k.json  synapse-2k.json  synapse-5k.json  synapse-postgres-noworkers-100.json  synapse-postgres-noworkers-1k.json  synapse-postgres-noworkers-200.json  synapse-postgres-noworkers-500.json  synapse-sqlite-100.json  synapse-sqlite-1k.json  synapse-sqlite-200.json  synapse-sqlite-500.json
test-suites/parameters/: large-server-chat.json  large-server-create_room.json  large-server-join.json  large-server-register.json  small-server-chat.json  small-server-create_room.json  small-server-join.json  small-server-register.json
